<package>
<name>psutil_ros</name>
<version>1.0.0</version>
<license>GPL</license>
<description>
the psutil_ros wrapper
</description>

  <maintainer email="bgouveia@gmail.com">Bruno Gouveia</maintainer>
  <author>Bruno Gouveia</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>python-psutil</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>python-psutil</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>